<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fpbg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">
<!--    <TextView-->
<!--        android:id="@+id/admin"-->
<!--        style="?android:textAppearanceSmall"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="3dp"-->
<!--        android:gravity="center"-->
<!--        android:padding="10dp"-->


<!--        android:textColor="#EB0505"-->
<!--        android:textStyle="bold" />-->
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffff"
        android:text="Welcome to Smart Bin Tracking"
        android:id="@+id/connection"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:padding="10dp"
        />
  <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"

            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:background="@drawable/roundbutton"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="Sign In"
        android:textColor="@color/white" />

    <!-- Link to Login Screen -->

    <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:layout_marginTop="16dp"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <!-- Link to Forget Password -->

    <TextView
        android:id="@+id/forget_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="10dp"

        android:text="Forget Your Password"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/refresh"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="10dp"

        />


</LinearLayout>
