<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fpbg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registation Form"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:padding="10dp"/>

    <ImageView
        android:id="@+id/regUserPhoto"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/userphoto"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText

            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Full Name"


            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="phone"

            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"



            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/email"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"


            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/password"

            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:focusableInTouchMode="true"
            android:hint="Password"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"

            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            tools:ignore="InvalidImeActionId" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        android:background="@drawable/roundbutton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Sign Up"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <!-- Link to Login Screen -->


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:layout_marginTop="20dip"
        android:text="Sign In"
        android:textColor="@color/white" />
</LinearLayout>